syntax = "proto3";
package io.axoniq.axondb;
import "common_messages.proto";
option java_multiple_files = true;

message Event {
    /* A message id */
    string message_identifier = 1;

    string aggregate_identifier = 2;
    int64 aggregate_sequence_number = 3;
    string aggregate_type = 4;

    int64 timestamp = 5;

    io.axoniq.platform.SerializedObject payload = 6;
    map<string, io.axoniq.platform.MetaDataValue> meta_data = 7;

    bool snapshot = 8;
}

message QueryValue {
    oneof data {
        string text_value = 1;
        sint64 number_value = 2;
        bool boolean_value = 3;
        double double_value = 4;
    }
}
